--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,4 +11,6 @@ services:
       MYSQL_PASSWORD: 'root'
       # Password for root access
       MYSQL_ROOT_PASSWORD: 'password'
+    ports: 
+      - 3306:3306
     
